sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:12: error: '(' expected but identifier found.
      if nain ==0{
         ^AlgGnomeSort:17: error: illegal start of simple expression
    }   
    ^